--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,14 +9,20 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-
+    
   cupertino_icons: ^1.0.6
+  # API
+  dio: ^5.4.3+1
+  retrofit: ^4.1.0
+  retrofit_generator: ^8.1.0
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
 
   flutter_lints: ^3.0.0
+  build_runner: ^2.4.9
 
 flutter:
 
