--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,13 +15,15 @@ dependencies:
   dio: ^5.4.3+1
   retrofit: ^4.1.0
   retrofit_generator: ^8.1.0
-  
-  #Logic
-  http: ^1.2.1
+# logic
+  bloc: ^8.1.4
   json_serializable: ^6.7.1
   json_annotation: ^4.8.1
-
-
+  flutter_bloc: ^8.1.5
+  # handle display images
+  shimmer: ^3.0.0
+  cached_network_image: ^3.3.1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
