--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,8 @@ dependencies:
   # handle display images
   shimmer: ^3.0.0
   cached_network_image: ^3.3.1
+  # for error handling
+  dartz: ^0.10.1
   
 dev_dependencies:
   flutter_test:
