--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -9,7 +9,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    
+  json_annotation: ^4.9.0
   cupertino_icons: ^1.0.6
   # API
   dio: ^5.4.3+1
@@ -17,8 +17,7 @@ dependencies:
   retrofit_generator: ^8.1.0
   # logic
   bloc: ^8.1.4
-  json_serializable: ^6.7.1
-  json_annotation: ^4.8.1
+  # json_serializable: ^6.7.1
   flutter_bloc: ^8.1.5
   # handle display images
   shimmer: ^3.0.0
@@ -37,6 +36,7 @@ dev_dependencies:
 
   flutter_lints: ^3.0.0
   build_runner: ^2.4.9
+  json_serializable: ^6.8.0
 
 flutter:
 
