--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,8 +28,21 @@ dependencies:
   # onboarding
   concentric_transition: ^1.0.3
   readmore: ^3.0.0
+  #web view
   url_launcher: ^6.2.6
   webview_flutter: ^4.8.0
+  #firebase
+  firebase_core: ^3.1.0
+  firebase_auth: ^5.1.0
+  cloud_firestore: ^5.0.1
+  firebase_storage: ^12.0.1
+  dash_chat_2: ^0.0.21
+  firebase_analytics: ^11.0.1
+  delightful_toast: ^1.1.0
+  image_picker: ^1.1.2
+  get_it: ^7.7.0
+  path: ^1.9.0
+
   
 dev_dependencies:
   flutter_test:
